# netbox-acls

./: Dockerfile  README.md  pyproject.toml
.github/workflows/: python-publish.yml
netbox_acls/: __init__.py  choices.py  filtersets.py  tables.py  views.py
netbox_acls/api/: nested_serializers.py  serializers.py  views.py
netbox_acls/forms/: filtersets.py  models.py
netbox_acls/graphql/: filters.py  schema.py  types.py
netbox_acls/models/: access_lists.py
netbox_acls/templates/inc/: view_tab.html
netbox_acls/templates/netbox_acls/: accesslist.html  accesslist_edit.html  aclextendedrule.html  aclinterfaceassignment.html  aclinterfaceassignment_edit.html  aclstandardrule.html
netbox_acls/tests/: test_api.py
