[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-data]
netbox_acls = ["templates/**"]

[tool.setuptools]
packages = ["netbox_acls"]

[tool.setuptools.package-dir]
netbox_acls = "netbox_acls"


[tool.black]
line-length = 140

[tool.isort]
profile = "black"
include_trailing_comma = true
multi_line_output = 3

[tool.pylint]
max-line-length = 140

[tool.pyright]
include = ["netbox_acls"]
exclude = [
    "**/node_modules",
    "**/__pycache__",
]
reportMissingImports = true
reportMissingTypeStubs = false

[tool.ruff]
line-length = 140

[project]
name = "netbox-acls"
version = "1.8.0"
readme = "README.md"
requires-python = ">=3.10.0"
classifiers=[
    'Development Status :: 5 - Production/Stable',
    'Intended Audience :: Developers',
    'Natural Language :: English',
    "Programming Language :: Python :: 3 :: Only",
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'Intended Audience :: System Administrators',
    'Intended Audience :: Telecommunications Industry',
    'Framework :: Django',
    'Topic :: System :: Networking',
    'Topic :: Internet',
]
keywords = ["netbox", "netbox-plugin"]
license = "MIT AND (Apache-2.0 OR BSD-2-Clause)"
license-files = ["LICENSE.txt"]


[project.urls]
Documentation = "https://github.com/netbox-community/netbox-acls/blob/dev/README.md"
Source = "https://github.com/netbox-community/netbox-acls/"
Tracker = "https://github.com/netbox-community/netbox-acls/issues"
